--- a/restaurant_menu/templates/index.html
+++ b/restaurant_menu/templates/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Restaurant Menu</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <h1>Restaurant Menu</h1>
-</body>
-
+    <h3>{{ meals }}</h3>
+  </body>
 </html>
