--- a/restaurant_menu/templates/index.html
+++ b/restaurant_menu/templates/index.html
@@ -1,35 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Restaurant Menu</title>
-</head>
-
-<body>
-  <h1>Restaurant Menu</h1>
+{% extends 'base.html' %}
+{% block content %}
+<h1>Restaurant Menu</h1>
+< class="list-group list-group-flash">
   {% for meal_type in meal_types %}
-  <h3>{{ meal_type.1 }}</h3>
+  <h3 class="pt-5">{{ meal_type.1 }}</h3>
   {% for row in item_list%}
   {% if row.meal_type == meal_type.0 %}
-  <div>
-    {% if row.status == 1 %}
+  {% if row.status == 1 %}
+  <li class="list-group-item d-flex justify-content-between align-center border-0 pb-0">
     <a href="{% url 'menu_item_detail' row.pk %}">
       <h4>{{ row.meal }}</h4>
     </a>
+    <h4><span class="badge bg-primary rounded-pill">{{ row.price }}</span></h4>
+  </li>
+  <li class="list-group-item pt-0">
     <p>{{ row.desctiption }}</p>
-    <p>{{ row.price }}</p>
-    {% else %}
-    <del>
+  </li>
+  {% else %}
+  <del>
+    <li class="list-group-item d-flex justify-content-between align-center border-0 pb-0">
       <h4>{{ row.meal }}</h4>
-      <p>{{ row.desctiption }}</p>
-    </del>
-    {% endif %}
-  </div>
+      <h4><span class="badge bg-primary rounded-pill">{{ row.price }}</span></h4>
+    </li>
+  </del>
+  <li class="list-group-item pt-0">
+    <p>{{ row.desctiption }}</p>
+  </li>
+  {% endif %}
   {% endif %}
   {% endfor %}
   {% endfor %}
-</body>
-
-</html>
+  </ul>
+  {% endblock %}
