--- a/restaurant_menu/templates/menu_item_detail.html
+++ b/restaurant_menu/templates/menu_item_detail.html
@@ -1,14 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-
-  <body>
-    <h1>{{ item.meal }}</h1>
-    <p>{{ item.desctiption }}</p>
-    <h4>{{ item.price }}</h4>
-  </body>
-</html>
+{% extends 'base.html' %} {% block content %}
+<h1 class="pt-5">{{ item.meal }}</h1>
+<p>{{ item.desctiption }}</p>
+<span class="badge bg-primary rounded-pill"><h4>{{ item.price }}</h4></span>
+{% endblock %}
